2023-09-06  Bruno Haible  <bruno@clisp.org>

	Don't export symbols from static MSVC .obj files.
	Suggested by Dmitry Bely <dmitry.bely@gmail.com> in
	<https://lists.gnu.org/archive/html/bug-gnu-libiconv/2023-08/msg00002.html>.
	* include/export.h: Add a copyright notice. Set LIBICONV_DLL_EXPORTED to
	empty on MSVC when DLL_EXPORT is not defined.
	* Makefile.devel (include/iconv.h.build.in): Filter out the second
	copyright notice.
	* configure.ac (DLL_VARIABLE): Test DLL_EXPORT, not _DLL.
	* lib/relocatable.h: From gnulib:
	(RELOCATABLE_DLL_EXPORTED): Don't use __declspec(dllexport) when
	creating static .obj files with MSVC.

2023-08-30  Bruno Haible  <bruno@clisp.org>

	Recognize the *-*-windows* config triplets introduced on 2023-06-26.
	* configure.ac: Treat windows* as equivalent to mingw*.

2023-06-29  Bruno Haible  <bruno@clisp.org>

	Update the installation instructions for Windows.
	* INSTALL.windows: Add a note about MSYS2.

2023-05-29  Bruno Haible  <bruno@clisp.org>

	GB18030: Help transitioning away from PUA code points.
	* lib/gb18030ext.h (gb18030_2005_ext_wctomb): Remove function.
	(gb18030ext_wctomb): Renamed from gb18030_2022_ext_wctomb.
	* lib/gb18030uni.h (gb18030_2005_uni_wctomb): Map 6 Ext-B code points to
	4-bytes sequences.
	(gb18030_2022_uni_wctomb): Small refactoring.
	* lib/gb18030_2005.h (gb18030_2005_pua2charset): Map 6 PUA code points
	to 4-bytes sequences instead of 2-bytes sequences.
	(gb18030_2005_wctomb): Update accordingly. Invoke gb18030ext_wctomb
	instead of gb18030_2005_ext_wctomb.
	* lib/gb18030_2022.h (gb18030_2022_wctomb): Invoke gb18030ext_wctomb
	instead of gb18030_2022_ext_wctomb.
	* tests/GB18030-2005.IRREVERSIBLE.TXT: Update the inverse mappings of 6
	Ext-B code points and 6 PUA code points.
	* NEWS: Mention it.

2023-05-24  Bruno Haible  <bruno@clisp.org>

	man pages: List a fifth condition when iconv(3) may stop.
	Based on the patch to the man-pages project
	<https://marc.info/?l=linux-man&m=168496625522371&w=2> =